fix: year outline cut off after page break

--- a/site/src/globals.scss
+++ b/site/src/globals.scss
@@ -140,6 +140,7 @@ $mui-transition-time: 268ms;
   .year {
     border: none;
     outline: 1px solid black;
+    outline-offset: -1px;
   }
 
   .year,
